--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "8.0.5",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.56.1",
     "sort-by": "^1.2.0",
@@ -31,9 +31,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
