--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movies_react",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://3nikeru.github.io/movies_react",
+  "homepage": "https://3Nikeru.github.io/movies_react",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -28,6 +28,8 @@
     "yup": "^0.32.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
