--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "homepage": "https://3Nikeru.github.io/movies_react",
   "dependencies": {
+    "@babel/core": "^7.20.12",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.16",
+    "@mui/joy": "^5.0.0-alpha.62",
     "@mui/material": "^5.10.17",
     "@mui/styled-engine-sc": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
@@ -17,13 +19,17 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-iframe": "^1.8.5",
     "react-redux": "8.0.5",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "sass": "^1.56.1",
     "sort-by": "^1.2.0",
     "styled-components": "^5.3.6",
+    "video-react": "^0.16.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
